# Shift

./: .env.template  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  test_predictions.txt  test_predictions.xlsx
docs/: openapi.yml
frontend/: Dockerfile  package-lock.json  package.json  server.js
frontend/public/: index.html
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
server/apps/core/services/: email.py
server/apps/core/viewsets/: __init__.py  base.py  create.py  create_retrieve.py
server/apps/projects/: apps.py  tasks.py
server/apps/projects/admin/: __init__.py  model_process.py  project.py
server/apps/projects/machine_learning/: __init__.py  main.py  models.py  predict.py  utils.py
server/apps/projects/migrations/: 0001_initial.py
server/apps/projects/migrations/constants/: __init__.py  default_tasks.py
server/apps/projects/models/: __init__.py  model_process.py  project.py
server/apps/projects/permissions/: __init__.py  model_response.py  project.py
server/apps/projects/serializers/: __init__.py  model_process.py  project.py
server/apps/projects/signals/: __init__.py  model_response.py
server/apps/projects/viewsets/: __init__.py  model_process.py  project.py
server/apps/users/permissions/: user.py
server/apps/users/serializers/: user.py
server/apps/users/viewsets/: user.py
server/config/: api_router.py  celery.py
server/config/settings/: drf.py  email.py  installed_apps.py  settings.py
server/templates/: base.html
server/templates/info/: info.html
(+25 files in other folders)
